manifests/base/notification/hanzocd-notifications-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: notifications-controller
    app.kubernetes.io/name: hanzocd-notifications-controller
    app.kubernetes.io/part-of: hanzocd
  name: hanzocd-notifications-controller
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: hanzocd-notifications-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hanzocd-notifications-controller
    spec:
      volumes:
        - name: tls-certs
          configMap:
            name: hanzocd-tls-certs-cm
        - name: hanzocd-repo-server-tls
          secret:
            secretName: hanzocd-repo-server-tls
            optional: true
            items:
            - key: tls.crt
              path: tls.crt
            - key: tls.key
              path: tls.key
            - key: ca.crt
              path: ca.crt
        - name: hanzocd-repo-server-mtls
          secret:
            secretName: hanzocd-repo-server-mtls
            optional: true
            items:
            - key: client.crt
              path: client.crt
            - key: client.key
              path: client.key
            - key: server-ca.crt
              path: server-ca.crt
      containers:
        - args:
            - /usr/local/bin/hanzocd-notifications
          workingDir: /app
          livenessProbe:
            tcpSocket:
              port: 9001
          image: ghcr.io/hanzoai/cd:latest
          imagePullPolicy: Always
          name: hanzocd-notifications-controller
          volumeMounts:
            - name: tls-certs
              mountPath: /app/config/tls
            - name: hanzocd-repo-server-tls
              mountPath: /app/config/reposerver/tls
            - name: hanzocd-repo-server-mtls
              mountPath: /app/config/reposerver/mtls
          securityContext:
            capabilities:
              drop:
              - ALL
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
      serviceAccountName: hanzocd-notifications-controller
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        kubernetes.io/os: linux
