manifests/base/notification/hanzocd-notifications-controller-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: notifications-controller
    app.kubernetes.io/name: hanzocd-notifications-controller-metrics
    app.kubernetes.io/part-of: hanzocd
  name: hanzocd-notifications-controller-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 9001
    targetPort: 9001
  selector:
    app.kubernetes.io/name: hanzocd-notifications-controller
